--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "cordova-plugin-insomnia": "git+https://github.com/EddyVerbruggen/Insomnia-PhoneGap-Plugin.git",
     "cordova-plugin-whitelist": "1",
     "mocha": "^5.0.0",
-    "uk.co.workingedge.phonegap.plugin.launchnavigator": "~4.0.7"
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-vue": "^4.3.0",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "~4.0.7",
+    "vue-resource": "^1.5.1",
+    "vue-template-compiler": "^2.5.16"
   },
   "scripts": {
     "test": "mocha ../tests/*"
