--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.evnotify.app",
-  "version": "1.1.8",
+  "version": "2.0.0",
   "displayName": "EVNotify",
   "cordova": {
     "platforms": [
@@ -16,6 +16,10 @@
     }
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
     "cordova-android": "~6.3.0",
     "cordova-plugin-autostart": "~2.0.1",
@@ -24,6 +28,7 @@
     "cordova-plugin-insomnia": "git+https://github.com/EddyVerbruggen/Insomnia-PhoneGap-Plugin.git",
     "cordova-plugin-whitelist": "1",
     "mocha": "^5.0.0",
+    "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-serve": "^0.4.2",
