--- a/package.json
+++ b/package.json
@@ -21,19 +21,22 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
-    "cordova-android": "~6.3.0",
-    "cordova-plugin-autostart": "~2.0.1",
-    "cordova-plugin-bluetooth-serial": "~0.4.7",
-    "cordova-plugin-geolocation": "~2.4.3",
+    "cordova-android": "^6.3.0",
+    "cordova-plugin-actionsheet": "^2.3.3",
+    "cordova-plugin-autostart": "^2.0.1",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-dialogs": "^1.3.4",
+    "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-insomnia": "git+https://github.com/EddyVerbruggen/Insomnia-PhoneGap-Plugin.git",
-    "cordova-plugin-whitelist": "1",
+    "cordova-plugin-whitelist": "^1.3.3",
     "mocha": "^5.0.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-vue": "^4.3.0",
-    "uk.co.workingedge.phonegap.plugin.launchnavigator": "~4.0.7",
+    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^4.0.7",
     "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.5.16"
   },
