--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "chai": "^4.1.2",
     "cordova-android": "^6.3.0",
     "cordova-plugin-actionsheet": "^2.3.3",
-    "cordova-plugin-autostart": "^2.0.1",
+    "cordova-plugin-autostart": "git+https://github.com/ToniKorin/cordova-plugin-autostart.git",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-dialogs": "^1.3.4",
