--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "displayName": "EVNotify",
   "cordova": {
     "platforms": [
+      "browser",
       "android"
     ],
     "plugins": {
@@ -13,7 +14,8 @@
       "uk.co.workingedge.phonegap.plugin.launchnavigator": {},
       "cordova-plugin-autostart": {},
       "cordova-plugin-insomnia": {},
-      "cordova-plugin-fcm": {}
+      "cordova-plugin-fcm": {},
+      "cordova-plugin-local-notification": {}
     }
   },
   "dependencies": {
@@ -23,14 +25,18 @@
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
     "cordova-android": "^6.3.0",
+    "cordova-browser": "^5.0.4",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-autostart": "git+https://github.com/ToniKorin/cordova-plugin-autostart.git",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-insomnia": "git+https://github.com/EddyVerbruggen/Insomnia-PhoneGap-Plugin.git",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "mocha": "^5.0.0",
     "rollup-plugin-babel": "^3.0.7",
