background mode; Persistent notifications; standby fix
- fixes #140
- closes #104
- closes #134

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
       "cordova-plugin-autostart": {},
       "cordova-plugin-insomnia": {},
       "cordova-plugin-fcm": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-background-mode": {}
     }
   },
   "dependencies": {
