new ui; fixes; update dependencies - update to 2.1.0

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-bluetooth-serial": {},
       "cordova-plugin-geolocation": {},
-      "uk.co.workingedge.phonegap.plugin.launchnavigator": {},
+      "uk.co.workingedge.phonegap.plugin.launchnavigator": {
+        "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
+      },
       "cordova-plugin-autostart": {},
       "cordova-plugin-insomnia": {},
       "cordova-plugin-fcm": {},
@@ -27,8 +29,10 @@
     "chai": "^4.1.2",
     "cordova-android": "^6.3.0",
     "cordova-browser": "^5.0.4",
+    "cordova-ios": "^5.0.1",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-autostart": "git+https://github.com/ToniKorin/cordova-plugin-autostart.git",
+    "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
     "cordova-plugin-compat": "^1.2.0",
@@ -40,6 +44,7 @@
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "mocha": "^5.0.0",
+    "moment": "^2.24.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
