--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "mocha": "^5.0.0",
     "moment": "^2.24.0",
+    "rollup": "^1.32.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
