--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,6 +5,7 @@ workflows:
       groups:
         - keystore_credentials # <-- Includes KEYSTORE, KEYSTORE_PASSWORD, KEY_ALIAS_PASSWORD, KEY_ALIAS
         - google_play # <-- Includes GCLOUD_SERVICE_ACCOUNT_CREDENTIALS - Store your google-services.json
+        - other
       # Add the group environment variables in Codemagic UI (either in Application/Team variables) - https://docs.codemagic.io/variables/environment-variable-groups/
       vars:
         KEYSTORE_PATH: '/tmp/keystore.keystore'
@@ -30,6 +31,7 @@ workflows:
         script: |
           set -x
           set -e
+          echo $ANDROID_FIREBASE_SECRET > $CM_BUILD_DIR/google-services.json
           cordova build android --release --no-interactive --prod --device
           echo $KEYSTORE | base64 --decode > $KEYSTORE_PATH
           UNSIGNED_APK_PATH=$(find platforms/android/app/build/outputs -name "*.apk" | head -1)
