--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -34,9 +34,9 @@ workflows:
           set -x
           set -e
           cordova build android --release --no-interactive --prod --device
-          echo $KEYSTORE | base64 --decode > $KEYSTORE_PATH
+          echo $CM_KEYSTORE | base64 --decode > $KEYSTORE_PATH
           UNSIGNED_APK_PATH=$(find platforms/android/app/build/outputs -name "*.apk" | head -1)
-          jarsigner -sigalg SHA1withRSA -digestalg SHA1 -keystore "${KEYSTORE_PATH}" -storepass "${KEYSTORE_PASSWORD}" -keypass "${KEY_ALIAS_PASSWORD}" "${UNSIGNED_APK_PATH}" "${KEY_ALIAS}"
+          jarsigner -sigalg SHA1withRSA -digestalg SHA1 -keystore "${KEYSTORE_PATH}" -storepass "${CM_KEYSTORE_PASSWORD}" -keypass "${CM_KEY_ALIAS_PASSWORD}" "${UNSIGNED_APK_PATH}" "${CM_KEY_ALIAS}"
           mv $UNSIGNED_APK_PATH $(echo $UNSIGNED_APK_PATH | sed 's/-unsigned//')          
     artifacts:
       - platforms/android/app/build/outputs/**/*.apk
